--- a/intro_service.html
+++ b/intro_service.html
@@ -1,13 +1,50 @@
-{% load static %}
-{% include 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>더사랑 통합재가센터 서비스 소개</title>
 
-{% block content %}
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Logo -->
+        <a class="navbar-brand" href="index.html" style="font-weight: bold; color: green; font-size: 30px; font-family: 'Noto Sans KR', sans-serif; border: 2px solid green; padding: 10px; border-radius: 50%; display: inline-block;">
+            더사랑
+        </a>
+        <!-- Toggle button for mobile view -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <!-- Navbar items -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">홈</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="intro_service.html">서비스 소개</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="registration.html">장기요양등급대리신청문의</a>
+                </li> -->
+                <!-- Add other menu items as necessary -->
+            </ul>
+        </div>
+    </nav>
 <div class="container mt-4">
 
     <!-- 왼쪽 이미지, 오른쪽 글 -->
     <div class="row mb-4">
         <div class="col-md-6">
-            <img src="{% static 'img/방문요양_Proto.png' %}" alt="Left Image" class="img-fluid">
+            <img src='static/img/방문요양_Proto.png' alt="Left Image" class="img-fluid">
         </div>
         <div class="col-md-6" style = "font-size: 25px; font-weight: bold;">
             <p>♡ 방문요양<br><hr>
@@ -31,16 +68,16 @@
                 집에서 나갈 필요 없이 안전하게 목욕을 즐기실 수 있습니다. 또한 전문가의 도움으로 안전하게 목욕을 마칠 수 있어요.</p>
         </div>
         <div class="col-md-6">
-            <img src="{% static 'img/방문목욕_Proto.png' %}" alt="Right Image" class="img-fluid">
+            <img src='static/img/방문목욕_Proto.png' alt="Right Image" class="img-fluid">
         </div>
     </div>
     <hr> <!-- 구분선 -->
 
 
     <!-- 버튼 -->
-    <div class="text-center">
+    <!-- <div class="text-center">
         <a href="{% url 'registration' %}" class="btn btn-primary" style = "font-size: 30px; background: green;">장기요양등급대리신청하러가기</a>
-    </div>
+    </div> -->
 
     <footer class="mt-5 p-4 text-white bg-dark footer">
         <div class="container">
@@ -51,5 +88,5 @@
     </footer>
 
 </div>
-
-{% endblock %}
+</body>
+</html>
