--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
 </footer>
 <!-- Kakao maps API -->
-<script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8842d176c845931a407c3ad4309249af"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8842d176c845931a407c3ad4309249af"></script>
 <script>
     var container = document.getElementById('map');
     var options = {
