네이버 인덱싱

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="naver-site-verification" content="b91254dfcdc3714ad3e47db7d05c8dd1ee193925" />
     <title>더사랑통합재가센터 서비스</title>
 
     <!-- Google Fonts: Roboto -->
