서비스소개 분할

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                     <a class="nav-link" href="index.html">홈</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="intro_service.html">서비스 소개</a>
+                    <a class="nav-link" href="homecare.html">방문요양</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="homebating.html">방문목욕</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="registration.html">장기요양등급대리신청문의</a>
