--- a/homecare.html
+++ b/homecare.html
@@ -30,7 +30,10 @@
                     <a class="nav-link" href="index.html">홈</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="intro_service.html">서비스 소개</a>
+                    <a class="nav-link" href="homecare.html">방문요양</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="homebathing.html">방문목욕</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="registration.html">장기요양등급대리신청문의</a>
@@ -39,24 +42,35 @@
             </ul>
         </div>
     </nav>
-<div class="container mt-4">
-
-    <!-- 왼쪽 이미지, 오른쪽 글 -->
-    <div class="row mb-4">
-        <div class="col-md-6">
-            <img src='static/img/방문요양_Proto.png' alt="Left Image" class="img-fluid">
-        </div>
-        <div class="col-md-6" style = "font-size: 25px; font-weight: bold;">
-            <p>♡ 방문요양<br><hr>
-                1. 방문요양이란?<br><br>
-                집에서 요양이 필요한 어르신을 위해 전문 요양사가 집으로 찾아와 일상 생활 지원, 기본적인 건강 관리, 간단한 재활 운동 등을 도와주는 서비스입니다.
-                <br><hr>
-                2. 어떤 장점이 있나요?<br><br>
-                병원이나 요양원에 가지 않아도 집에서 전문 요양사의 도움을 받아 건강 관리와 일상 생활을 유지하실 수 있습니다.</p>
-        </div>
+    <div class="content" style = "font-size: 20px; font-weight: bold;">
+        <p>
+            <h1>1. 방문요양이란?</h1><br>
+            집에서 요양이 필요한 어르신을 위해 전문 요양사가 집으로 찾아와 일상 생활 지원, 기본적인 건강 관리, 간단한 재활 운동 등을 도와주는 서비스입니다.
+            <br><hr>
+            <h1>2. 방문요양 왜 필요한가요?</h1><br>
+            병원이나 요양원에 가지 않아도 집에서 전문 요양사의 도움을 받아 건강 관리와 일상 생활을 유지하실 수 있습니다.</p>
     </div>
     <hr> <!-- 구분선 -->
 
+    <div class="content" style = "font-size: 20px; font-weight: bold;">
+        <h1> 3. 방문요양절차 </h1>
+        <p>
+            <br>
+            01. 신청<br>
+            - 65세 이상 노인분<br>
+            - 65세 미만 이지만 노인질병을 가진 분<br>
+            - 혼자서는 일상생활이 불편하신 분(본인 또는 대리인이 방문, 우편, 팩스, 인터넷으로 장기노인요양센터 또는 국민 건강보험공단에 신청할 수 있습니다.)<br>
+            <br>
+            02. 판정<br>
+            - 장기요양등급판정위원회에서 신청일로부터 30일 이내에 판정합니다.<br>
+            - 6개월 이상 동안 혼자서 일상생활이 어렵다고 인정되는 경우 심신상태 및 장기요양이 필요한 정도에 따라 등급을 판정<br>
+            <br>
+            03. 결과통지<br>
+            - 신청일로부터 30일 이내에 판정결과에 따라 장기요양인정서, 표준이용계획서를 송부합니다.<br>
+            - 유효기간 종료 90일 전부터 30일 전까지 갱신신청이 가능합니다.<br>
+            - 유효기간 경과 후 매년 연속 3회 이상 같은 등급으로 판정되는 경우 3회 이후부터 유효기간은 2년입니다.<br>
+        </p>
+    </div>
     <!-- 버튼 -->
     <!-- <div class="text-center">
         <a href="{% url 'registration' %}" class="btn btn-primary" style = "font-size: 30px; background: green;">장기요양등급대리신청하러가기</a>
