--- a/homebathing.html
+++ b/homebathing.html
@@ -23,6 +23,16 @@
             color: #4e4e4e;
         }
 
+        .section-title {
+            background-color: #e9ecef;
+            border-radius: 0.25rem;
+            padding: 0.5rem;
+            margin-top: 1rem;
+            text-align: center;
+            font-size: 1.5rem;
+            color: #495057;
+        }
+
         .contact-badge {
             position: fixed;
             bottom: 10px;
@@ -58,13 +68,23 @@
             margin: 0; /* 기본 마진 제거 */
         }
 
+        /* 모바일 뷰 대응 */
+        @media (max-width: 991px) {
+            .navbar {
+                padding-top: 0; /* 상단 여백 제거 */
+            }
+
+            .centered-text {
+                font-size: 20px; /* 모바일에서 폰트 사이즈 조정 */
+            }
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <!-- Brand/logo -->
-            <a class="navbar-brand" href="index.html" style="font-weight: bold; color: green; font-size: 30px; font-family: 'Noto Sans KR', sans-serif; border: 2px solid green; padding: 10px; border-radius: 50%; display: inline-block;">
+            <a class="navbar-brand" hWref="index.html" style="font-weight: bold; color: green; font-size: 30px; font-family: 'Noto Sans KR', sans-serif; border: 2px solid green; padding: 10px; border-radius: 50%; display: inline-block;">
                 더사랑통합재가센터
             </a>
             <!-- Toggler/Collapsible Button for mobile view -->
@@ -94,30 +114,29 @@
     </div> -->
 
     <div class="container content" style = "margin-top:100px; font-size: 20px; font-weight: bold;">
-            <h1>1. 방문목욕이란?</h1><br>
+            <h1 class="section-title">방문목욕이란?</h1><br>
             <p>
                 집에서 편안하게 목욕을 원하시는 어르신을 위해 전문가가 집으로 직접 찾아와 목욕 서비스를 제공하는 것입니다.
             </p>
             
             <br>
-            <h1>2. 방문목욕 왜 필요한가요?</h1><br>
+            <h1 class="section-title">방문목욕 왜 필요한가요?</h1><br>
             <p>집에서 나갈 필요 없이 안전하게 목욕을 즐기실 수 있습니다. 또한 전문가의 도움으로 안전하게 목욕을 마칠 수 있어요.</p>
     </div>
-    <hr> <!-- 구분선 -->
 
     <div class="container content" style = "font-size: 20px; font-weight: bold;">
-        <h1> 3. 방문목욕 서비스 절차 </h1>
+        <h1 class="section-title">방문목욕 서비스 절차 </h1>
         <p>
             <br>
-            <h2>1) 목욕전 컨디션확인</h2>
+            <h2>1. 목욕전 컨디션확인</h2>
             목욕시 저체력으로 인해 건강상 문제가 발생할 수 있고 목욕 후 체력이 떨어지는 등의 문제가 발생할 수 있으므로 반드시 목욕전에 대상자의 혈압, 체온, 맥박 등의 건강상태를 확인 후 입욕 여부를 결정합니다.<br><br>
-            <h2>2)입욕준비</h2>
+            <h2>2. 입욕준비</h2>
             서비스의 내용에 따라 목욕차량을 이용한 목욕, 이동욕조를 설치한 목욕 혹은 가정내의 욕조를 이용한 목욕을 실시하게 됩니다.<br><br>
-            <h2>3) 입욕</h2>
+            <h2>3. 입욕</h2>
             세면과 머리감기를 우선적으로 실시하며 이후 온몸으로 이동하여 목욕을 실시하며 깨끗한 물로 한번 더 씻습니다.<br><br>
-            <h2>4) 닦고 머리말리기</h2>
+            <h2>4. 닦고 머리말리기</h2>
             타월, 목욕가운 등을 걸치고 자리를 옮긴 후 몸을 닦고 드라이를 이용하여 머리를 깨끗히 말려줍니다.<br><br>
-            <h2>5) 목욕 후 컨디션 확인</h2>
+            <h2>5. 목욕 후 컨디션 확인</h2>
             목욕 후 신체의 변화가 없는지에 대해 목욕 전 컨디션 확인 떄와 목욕 후에도 재확인 합니다.
         </p>
     </div>
