--- a/homecare.html
+++ b/homecare.html
@@ -10,7 +10,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-
+        body {
+            padding-top: 56px; /* Fixed navbar offset */
+            font-family: 'Roboto', sans-serif;
+        }
 
         .navbar {
             background-color: #fff;
@@ -20,6 +23,16 @@
         .navbar-brand {
             font-family: 'Noto Sans KR', sans-serif;
             color: #4e4e4e;
+        }
+
+        .section-title {
+            background-color: #e9ecef;
+            border-radius: 0.25rem;
+            padding: 0.5rem;
+            margin-top: 1rem;
+            text-align: center;
+            font-size: 1.5rem;
+            color: #495057;
         }
 
         .contact-badge {
@@ -56,7 +69,17 @@
         footer address, footer p {
             margin: 0; /* 기본 마진 제거 */
         }
+    
+    /* 모바일 뷰 대응 */
+    @media (max-width: 991px) {
+        .navbar {
+            padding-top: 0; /* 상단 여백 제거 */
+        }
 
+        .centered-text {
+            font-size: 20px; /* 모바일에서 폰트 사이즈 조정 */
+        }
+    }
     </style>
 
 </head>
@@ -91,29 +114,29 @@
     </nav>
     <div class="container content" style = "margin-top: 100px; font-size: 20px; font-weight: bold;">
         <p>
-            <h1>1. 방문요양이란?</h1><br>
+            <h1 class="section-title">방문요양이란?</h1><br>
             <p>집에서 요양이 필요한 어르신을 위해 전문 요양사가 집으로 찾아와 일상 생활 지원, 기본적인 건강 관리, 간단한 재활 운동 등을 도와주는 서비스입니다.</p> 
             <br>
-            <h1>2. 방문요양 왜 필요한가요?</h1><br>
+            <h1 class="section-title">방문요양 왜 필요한가요?</h1><br>
             <p>병원이나 요양원에 가지 않아도 집에서 전문 요양사의 도움을 받아 건강 관리와 일상 생활을 유지하실 수 있습니다.</p>
     </div>
-    <hr> <!-- 구분선 -->
 
     <div class="container content" style = "font-size: 20px; font-weight: bold;">
-        <h1> 3. 방문요양절차 </h1>
+        <h1 class="section-title"> 방문요양절차 </h1>
         <p>
             <br>
-            <h2>1) 신청</h2>
+            <h2>1. 신청</h2>
             - 65세 이상 노인분<br>
             - 65세 미만 이지만 노인질병을 가진 분<br>
-            - 혼자서는 일상생활이 불편하신 분(본인 또는 대리인이 방문, 우편, 팩스, 인터넷으로 장기노인요양센터 또는 국민 건강보험공단에 신청할 수 있습니다.)<br>
+            - 혼자서는 일상생활이 불편하신 분<br>
+            (본인 또는 대리인이 방문, 우편, 팩스, 인터넷으로 장기노인요양센터 또는 국민 건강보험공단에 신청할 수 있습니다.)<br>
             <br>
-            <h2>2) 판정</h2>
+            <h2>2. 판정</h2>
             <br>
             - 장기요양등급판정위원회에서 신청일로부터 30일 이내에 판정합니다.<br>
             - 6개월 이상 동안 혼자서 일상생활이 어렵다고 인정되는 경우 심신상태 및 장기요양이 필요한 정도에 따라 등급을 판정<br>
             <br>
-            <h2>3) 결과통지</h2><br>
+            <h2>3. 결과통지</h2><br>
             - 신청일로부터 30일 이내에 판정결과에 따라 장기요양인정서, 표준이용계획서를 송부합니다.<br>
             - 유효기간 종료 90일 전부터 30일 전까지 갱신신청이 가능합니다.<br>
             - 유효기간 경과 후 매년 연속 3회 이상 같은 등급으로 판정되는 경우 3회 이후부터 유효기간은 2년입니다.<br>
