--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             height: 350px;
         }
         .blurry-background {
+            margin-top: 80px;
             position: relative;
             overflow: hidden;
         }
@@ -143,9 +144,9 @@
                 더사랑통합재가센터
             </a>
             <!-- Toggler/Collapsible Button for mobile view -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo" aria-controls="navbarTogglerDemo" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
 
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbarTogglerDemo">
