--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="더사랑통합재가센터 - 홈" />
     <meta property="og:description" content="더사랑통합재가센터에서 제공하는 최상의 서비스와 편안한 케어를 경험하세요." />
-    <meta property="og:image" content="http://www.thesarangcare.com/static/img/더사랑메인.png" />
-    <meta property="og:url" content="http://www.thesarangcare.com" />
+    <meta property="og:image" content="https://www.thesarangcare.com/static/img/더사랑메인.png" />
+    <meta property="og:url" content="https://www.thesarangcare.com" />
 
     <!-- Google Fonts: Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
