--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         marker.setMap(map);
 
         // set infowindow
-        var iwContent = '<div style="padding:5px;">더사랑통합재가센터</div>',
+        var iwContent = '<div style="padding:5px; max-width: 150px; overflow: hidden; text-overflow: ellipsis;">더사랑통합재가센터</div>',
             iwPosition = new kakao.maps.LatLng(37.520963, 126.802299);
 
         var infowindow = new kakao.maps.InfoWindow({
