--- a/homebathing.html
+++ b/homebathing.html
@@ -155,4 +155,6 @@
 
 </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+XSSePPrj3jSBWgi1FwO5qRGvFXOdJZ4YmX" crossorigin="anonymous"></script>
 </html>
