--- a/homecare.html
+++ b/homecare.html
@@ -69,17 +69,14 @@
         footer address, footer p {
             margin: 0; /* 기본 마진 제거 */
         }
+
+        img, .container, .map-container, .service-container {
+            max-width: 100%; /* 이미지 및 컨테이너 최대 너비 설정 */
+            height: auto; /* 이미지 높이 자동 조절 */
+        }
     
     /* 모바일 뷰 대응 */
-    @media (max-width: 991px) {
-        .navbar {
-            padding-top: 0; /* 상단 여백 제거 */
-        }
 
-        .centered-text {
-            font-size: 20px; /* 모바일에서 폰트 사이즈 조정 */
-        }
-    }
     </style>
 
 </head>
@@ -113,7 +110,6 @@
         </div>
     </nav>
     <div class="container content" style = "margin-top: 100px; font-size: 20px; font-weight: bold;">
-        <p>
             <h1 class="section-title">방문요양이란?</h1><br>
             <p>집에서 요양이 필요한 어르신을 위해 전문 요양사가 집으로 찾아와 일상 생활 지원, 기본적인 건강 관리, 간단한 재활 운동 등을 도와주는 서비스입니다.</p> 
             <br>
