--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="naver-site-verification" content="b91254dfcdc3714ad3e47db7d05c8dd1ee193925" />
-    <title>더사랑통합재가센터 - 편안하게 모시겠습니다.</title>
+    <title>방문요양 전문센터: 더사랑통합재가센터</title>
     <meta name="description" content="더사랑통합재가센터에서는 고객님의 편안함과 건강을 최우선으로 생각합니다. 서비스 소개, 장기요양등급대리신청문의에 대해 알아보세요.">
 
     <!-- Open Graph tags -->
